<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/idTiempoRegistro"
        style="@style/registroItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/timer"

/>

    <View
        android:layout_width="2dp"
        android:layout_height="fill_parent"
        android:background="#000"

        android:layout_weight="0"/>

    <TextView
        android:id="@+id/idFechaRegistro"
        style="@style/registroItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/fecha"
/>

    <View
        android:layout_width="2dp"
        android:layout_height="fill_parent"
        android:background="#000"
        android:layout_weight="0"/>

    <TextView
        android:id="@+id/idHoraRegistro"
        style="@style/registroItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/hora"

/>
</LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#000"
/>


</LinearLayout>