<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ShowDevicesFragment">

    <ProgressBar
        android:id="@+id/idProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:indeterminate="false"
        android:max="48"
        android:progress="1"
        android:progressDrawable="@drawable/circular"
        android:layout_gravity="center"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/idShowDevicesLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tituloDispositivos"
            android:textColor="#000"
            android:textSize="60dp"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/idScan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/escanear"
                android:layout_weight="1"
                android:layout_margin="5dp"/>
            <Button
                android:id="@+id/idStop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detener"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:enabled="false"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/idRecyclerDevice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

</FrameLayout>